data/derived/comb/progs/unify/prog4413.ml.out
Characters 89-99:
  ((i+j) mod 10, a::((i+j)/10)) in
                    ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
